--- a/index.html
+++ b/index.html
@@ -16,31 +16,38 @@
             <tr>
                 <th>Task Number</th>
                 <th>Link</th>
+                <th>Repo link</th>
             </tr>
             
             <tr>
                 <td>Task1</td>
                 <td><a href="https://react-js-task2-6w62.vercel.app/">Link1</a></td>
+                <td><a href="https://github.com/Aravind7755/React-js-task1">Link1</a></td>
             </tr>
             <tr>
                 <td>Task2</td>
                 <td><a href="https://react-js-task2-one.vercel.app/">Link2</a></td>
+                <td><a href="https://github.com/Aravind7755/React-js-task2">Link2</a></td>
             </tr>
             <tr>
                 <td>Task3</td>
                 <td><a href="https://react-js-task3-seven.vercel.app/">Link3</a></td>
+                <td><a href="https://github.com/Aravind7755/React-js-task3">Link3</a></td>
             </tr>
             <tr>
                 <td>Task4</td>
                 <td><a href="https://react-js-rosy-six.vercel.app/">Link4</a></td>
+                <td><a href="https://github.com/Aravind7755/React-js">Link4</a></td>
             </tr>
             <tr>
                 <td>Task5</td>
                 <td><a href="https://react-js-task5-umber.vercel.app/">Link5</a></td>
+                <td><a href="https://github.com/Aravind7755/React-js-task5">Link5</a></td>
             </tr>
             <tr>
                 <td>Task6</td>
                 <td><a href="https://react-js-task6.vercel.app/">Link6</a></td>
+                <td><a href="https://github.com/Aravind7755/React-js-task6">Link6</a></td>
             </tr>
            
         </table>
@@ -53,4 +60,3 @@
     }
 </style>
 </html>
-
